--- a/Atividades/atividade-06/style.css
+++ b/Atividades/atividade-06/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    color: #fff
+    color: #fff;
+    background: rgba(253, 248, 248, 0.705);
 }
 p{
     font-size: 18px;
