--- a/Atividades/projeto-final/style.css
+++ b/Atividades/projeto-final/style.css
@@ -171,7 +171,7 @@ a{
 
 .texto{
     margin-left: 53%;
-    margin-top: -18%;
+    margin-top: -15%;
     
 }
 #texto{
@@ -199,23 +199,58 @@ a{
 
 /* sobre */
 .sobre{
-    background-color: rgb(209, 209, 209);
+    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(209, 209, 209); */
     height: 340px;
-
+    display: flex;
+    text-align: justify;
 }
 
-.imgServidor{
-    width: 30%;
+
+.textoSobre{
+    margin-left: 1%;
+    /* margin-right: 2%;  */
+    margin-top: 3%;
+    
+}
+
+#textoSobre{
+    font-weight: bold;
+    font-size: 25px;
+    color:rgb(61, 181, 234);
+}
+
+.grafico{
+    width: 270px;
+    margin-right: 3%;
+    margin-left: 2%;
+}
+
+.imgGrafico{
+    margin-left: 4%;
+    margin-top: 8%;
+    width: 270px;
 }
 
 /* servicos */
-.servicos{
-    background-color: rgb(49, 140, 184);
+.contato{
+    /* background-color: rgb(49, 140, 184); */
+    background-color:  rgb(34, 78, 107);
     height: 660px;
     padding: 15px;
     color: rgb(255, 255, 255);
     font-weight: bold;
+    /* display: flex; */
 }
+.imgContato{
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    margin-top: -35%;
+    margin-left: 55%;
+}
+
 
 textarea{
     border-radius: 7px;
@@ -229,7 +264,7 @@ input.btn {
     border: none;
     color:rgb(61, 181, 234);
     font-weight: bold;
-    width: 22%;
+    width: 322px;
     height: 30px;
     align-items: center;
     border-radius: 7px;
@@ -264,34 +299,64 @@ input.entrada{
 /* curso */
 
 .curso{
-    background-color:  rgb(34, 78, 107);
-    height: 340px;
-
-}
-
-/* contato */
-.contato{
-    background-color: rgb(242, 243, 247);
+    /* background-color:  rgb(34, 78, 107); */
+    background-color: rgb(49, 140, 184);
     height: 340px;
     display: flex;
     justify-content: center;
-    /* font-family: 'Cedarville Cursive', cursive; */
+    color: rgb(255, 255, 255);
+    /* font-weight: bold; */
+    
+}
 
+.cursoImg{
+    width: 75px;
+    /* margin: 75px; */
+}
+.cursoIcone{
+    text-align: center;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 12%;
 
 }
 
-/* div.linkedin{
-    height: 75px;
-} */
+input.btnComprar {
+    border: none;
+    color:rgb(61, 181, 234);
+    font-weight: bold;
+    width: 75px;
+    height: 30px;
+    align-items: center;
+    border-radius: 7px;
+    background-color:  rgb(255, 255, 255); 
+
+    cursor:pointer;
+    box-shadow: none;
+}
+
+input.btnComprar:hover, .active {
+    color:rgb(255, 255, 255);
+    outline: none;
+    transition-duration: 0.5s;
+    background-color: hsl(199, 82%, 58%)
+    
+}
+
+.redeSocial{
+    background-color: rgb(242, 243, 247);
+    height: 240px;
+    display: flex;
+    justify-content: center;
+
+}
 
 .linkedin, .github{
-    margin-top: 9%;
+    margin-top: 6%;
 }
 
-.github{
-    position:relative;
-}
-.linkedin:hover, .github:hover{
+.whatsapp:hover, .linkedin:hover, .github:hover{
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
@@ -308,7 +373,4 @@ input.entrada{
     position: fixed;
     bottom: 2%;
 }
-
-
-
 
